--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.17.12",
+    "@faker-js/faker": "^7.5.0",
     "@jackfranklin/test-data-bot": "^1.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
